--- a/sandbox/basic/index.html
+++ b/sandbox/basic/index.html
@@ -4,13 +4,57 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>chaiCode-Hitesh</title>
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
+    integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
+
     <link rel="stylesheet" href="./styles.css">
 </head>
 <body>
     <header>
-        <h1>chaiCode  <span> &lt;  Js journey &mdash; June coding Learning  &gt;</span> </h1>
+        <span class="logo">
+            <img src="./chaiCodeLogo-removebg-preview.png" alt="chaiCode logo">
+        </span>
+        <h1 class="chaiColor">chaiCode
+            <!-- <span> &lt;  Js journey &mdash; June Month Learning  &gt;</span> -->
+         </h1>
     </header>
-    <main></main>
+    <main>
+        <aside>
+            <nav>
+                <ul>
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">Basics</a></li>
+                    <li><a href="#">Intermediate</a></li>
+                    <li><a href="#">Advance</a></li>
+                </ul>
+            </nav>
+        </aside>
+        <section class="cards">
+            <h2>Basics of <span class="chaiColor">JavaScript</span>   by Hitesh</h2>
+            <div class="cards-container">
+            <div class="card">
+                <div class="card-header-info">
+                <!-- <span class="icon"><i class="fa-solid fa-code"></i></span> -->
+                <span class="video-count chaiColor"><small>video 1 </small><i class="fa-solid fa-arrow-up-right-from-square"></i></span>
+            </div>
+                <h3>Topics Insight</h3>
+                <p> var, let, const, console.log, console.table, github, github workspace</p>
+            </div>
+            <div class="card">
+                <div class="card-header-info">
+                <!-- <span class="icon"><i class="fa-solid fa-code"></i></span> -->
+
+                 <span class="video-count chaiColor"><small>video 2 </small><i class="fa-solid fa-arrow-up-right-from-square"></i></span>
+            </div>
+                <h3>Topics Insight</h3>
+                <p> data types - [string, number, bigint, boolean, undefined, null, symbols, object], typeof operator</p>
+            </div>
+
+        </div>
+        </section>
+    </main>
     <footer></footer>
 
     <script src="./app.js"></script>
