add new files and onNavLink click section update

--- a/sandbox/basic/index.html
+++ b/sandbox/basic/index.html
@@ -13,19 +13,22 @@
 </head>
 <body>
     <header>
+
         <span class="logo">
             <img src="./chaiCodeLogo-removebg-preview.png" alt="chaiCode logo">
         </span>
         <h1 class="chaiColor">chaiCode
             <!-- <span> &lt;  Js journey &mdash; June Month Learning  &gt;</span> -->
          </h1>
+         <p class="full-video-link grayColor">  <a href="https://www.youtube.com/watch?v=sscX432bMZo">Full video link here <i class="fa-solid fa-link"></i></a></p>
+
     </header>
     <main>
         <aside>
             <nav>
                 <ul>
                     <li><a href="#">Home</a></li>
-                    <li><a href="#">Basics</a></li>
+                    <li class=""><a href="#">Basics</a></li>
                     <li><a href="#">Intermediate</a></li>
                     <li><a href="#">Advance</a></li>
                 </ul>
@@ -37,7 +40,7 @@
             <div class="card">
                 <div class="card-header-info">
                 <!-- <span class="icon"><i class="fa-solid fa-code"></i></span> -->
-                <span class="video-count chaiColor"><small>video 1 </small><i class="fa-solid fa-arrow-up-right-from-square"></i></span>
+                <span class="video-count "><small>video 1 </small><a href="https://www.youtube.com/watch?v=sscX432bMZo&t=1634s" target="_blank"><i class="fa-solid fa-arrow-up-right-from-square grayColor"></i></a></span>
             </div>
                 <h3>Topics Insight</h3>
                 <p> var, let, const, console.log, console.table, github, github workspace</p>
@@ -46,10 +49,19 @@
                 <div class="card-header-info">
                 <!-- <span class="icon"><i class="fa-solid fa-code"></i></span> -->
 
-                 <span class="video-count chaiColor"><small>video 2 </small><i class="fa-solid fa-arrow-up-right-from-square"></i></span>
+                 <span class="video-count "><small>video 2 </small><i class="fa-solid fa-arrow-up-right-from-square grayColor"></i></span>
             </div>
                 <h3>Topics Insight</h3>
                 <p> data types - [string, number, bigint, boolean, undefined, null, symbols, object], typeof operator</p>
+            </div>
+            <div class="card">
+                <div class="card-header-info">
+                <!-- <span class="icon"><i class="fa-solid fa-code"></i></span> -->
+
+                 <span class="video-count "><small>video 3 </small><i class="fa-solid fa-arrow-up-right-from-square grayColor"></i></span>
+            </div>
+                <h3>Topics Insight</h3>
+                <p> conversions- string to number, number to string, Nan </p>
             </div>
 
         </div>
